--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
   <body>
     <h1 id="title"> Ashley's Whack-A-Hole!!! </h1>
     <div>
-      <div>
+      <!-- Start Buttons -->
+       <div style="text-align: center;">        
         <h2>Click start to play!</h2>
       </div>
       <button id="start">start</button>
@@ -18,7 +19,7 @@
         <img src="assets/mallet.png">
       </div>
       
-     <!-- Score and time coode-->
+     <!-- Score and time code-->
       <div>
         <h2>score: <span id="score">0</span></h2>
       </div>
