--- a/index.html
+++ b/index.html
@@ -4,24 +4,27 @@
     <meta charset="UTF-8">
     <title>Ashley's Whack-A-Hole</title>
     <link rel="stylesheet" href="src/styles.css">
-    <title>
-      Ashley's Whack-A-Hole
-    </title>
   </head>
   <body>
     <h1 id="title"> Ashley's Whack-A-Hole </h1>
-    <div>
       <div>
-        <h2>Click start to play!</h2>
+        <!-- Start Button -->
+        <div style="text-align: center;">
+        <h2>Click <button id="start" type="button" onclick="startGame()">start</button> to play!</h2>
+          
+ <!-- Mallet img on cursor -->
+      <div class="cursor">
+        <img src="assets/mallet.png">
       </div>
-      <button id="start">start</button>
+      <!-- Score and time code-->
       <div>
-        <h2>score: <span id="score">0</span></h2>
+      <h2>score: <span id="score">0</span></h2>
       </div>
       <div>
           <h2><span id="timer">0</span> seconds left.</h2>
       </div>
     </div>
+        <!-- Hole and mole code -->
     <div class="grid">
       <div id="hole0" class="hole">
         <div id="mole0" class="mole"></div>
