--- a/index.html
+++ b/index.html
@@ -4,10 +4,7 @@
     <meta charset="UTF-8">
     <title>Ashley's Whack-A-Hole</title>
     <link rel="stylesheet" href="src/styles.css">
-    <title>
-      Ashley's Whack-A-Hole
-    </title>
-  </head>
+   </head>
   <body>
     <h1 id="title"> Ashley's Whack-A-Hole </h1>
     <div>
@@ -15,6 +12,11 @@
         <h2>Click start to play!</h2>
       </div>
       <button id="start">start</button>
+      <!--Mallet img on cursor -->
+      <div class="cursor">
+        <img src="assets/mallet.png">
+      </div>
+      <!-- Score and time code -->
       <div>
         <h2>score: <span id="score">0</span></h2>
       </div>
