--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
           <h2><span id="timer">0</span> seconds left.</h2>
       </div>
     </div>
+    <!-- Hole and mole code -->
     <div class="grid">
       <div id="hole0" class="hole">
         <div id="mole0" class="mole"></div>
