--- a/index.html
+++ b/index.html
@@ -4,18 +4,17 @@
     <meta charset="UTF-8">
     <title>Ashley's Whack-A-Hole</title>
     <link rel="stylesheet" href="src/styles.css">
-   </head>
+    <title>
+      Ashley's Whack-A-Hole
+    </title>
+  </head>
   <body>
     <h1 id="title"> Ashley's Whack-A-Hole </h1>
     <div>
-      <!-- Start Buttons and song--> 
-     <div style="text-align: center;">
-        <h2>Click <button id="start" type="button" onclick="startGame()">start</button> to play!</h2>
-      <!--Mallet img on cursor -->
-      <div class="cursor">
-        <img src="assets/mallet.png">
+      <div>
+        <h2>Click start to play!</h2>
       </div>
-      <!-- Score and time code -->
+      <button id="start">start</button>
       <div>
         <h2>score: <span id="score">0</span></h2>
       </div>
@@ -23,7 +22,6 @@
           <h2><span id="timer">0</span> seconds left.</h2>
       </div>
     </div>
-    <!-- Hole and mole code -->
     <div class="grid">
       <div id="hole0" class="hole">
         <div id="mole0" class="mole"></div>
