--- a/index.html
+++ b/index.html
@@ -2,26 +2,34 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>Ashley's Whack-A-Hole</title>
-    <link rel="stylesheet" href="src/styles.css">
-    <title>
-      Ashley's Whack-A-Hole
-    </title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./src/styles.css">
   </head>
   <body>
-    <h1 id="title"> Ashley's Whack-A-Hole </h1>
+    <h1 id="title"> Whack-A-Mole In Space!!!</h1>
     <div>
-      <div>
-        <h2>Click start to play!</h2>
+      <!-- Start Buttons and song-->
+      <div style="text-align: center;">
+        <h2>Click <button id="start" type="button" onclick="startGame()">start</button> to play!</h2>
+        <button id ="startButton" type="button" class="startButton" onclick="startGame('easy')"> Easy</button> 
+        <button id ="normalButton" type="button" class="startButton" onclick="startGame('normal')">Normal</button>
+        <button id="hardButton" type="button" class="startButton" onclick="startGame('hard')">Hard</button>
+        
+      
+
+      <!-- Mallet img on cursor -->
+      <div class="cursor">
+        <img src="assets/mallet.png">
       </div>
-      <button id="start">start</button>
+      <!-- Score and time code-->
       <div>
         <h2>score: <span id="score">0</span></h2>
       </div>
       <div>
-          <h2><span id="timer">0</span> seconds left.</h2>
+          <h2><span id="timerDisplay">0</span> seconds left</h2>
       </div>
     </div>
+     <!-- Hole and mole code -->
     <div class="grid">
       <div id="hole0" class="hole">
         <div id="mole0" class="mole"></div>
@@ -29,6 +37,7 @@
       <div id="hole1" class="hole">
         <div id="mole1" class="mole"></div>
       </div>
+      <!--TODO: Add the missing holes and moles. -->
       <div id="hole2" class="hole">
         <div id="mole2" class="mole"></div>
       </div>
@@ -50,7 +59,12 @@
       <div id="hole8" class="hole">
         <div id="mole8" class="mole"></div>
       </div>
+
+      <div class="mole">click here to trigger the click event on mole 1</div>
+     <div class="mole">click here to trigger the click event on mole 2</div>
+
     </div>
+
     <script src="./src/index.js"></script>
   </body>
 </html>
