--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="./src/styles.css">
   </head>
   <body>
-    <h1 id="title"> Ashley's Wahck-a-Hole!!!</h1>
+    <h1 id="title"> Ashley's Whack-a-Hole!!!</h1>
     <div>
       <!-- Start Buttons and song-->
       <div style="text-align: center;">
